Developed overview work Close #12

--- a/src/styles/tokens.module.css
+++ b/src/styles/tokens.module.css
@@ -8,6 +8,8 @@
     --medium-spacer: 3.6rem;
     --regular-text: 2rem;
     --small-title: 4rem;
+    --small-subtitle: 3rem;
+    --medium-subtitle: 5rem;
     --medium-title: 6rem;
     --large-title: 10rem;
 }
