added more projects to detail page

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -58,7 +58,7 @@
 .workList {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: 1fr;
     grid-gap: var(--extrasmall-spacer);
 }
 
