--- a/src/templates/work-template.module.css
+++ b/src/templates/work-template.module.css
@@ -206,6 +206,100 @@
     max-width: 62rem;
 }
 
+.more {
+    background-color: var(--red-color);
+}
+
+.moreInnerwrapper {
+    max-width: 96rem;
+    margin: 0 auto;
+    padding: var(--medium-spacer) var(--extrasmall-spacer) 5rem var(--extrasmall-spacer);
+}
+
+.moreTitle {
+    text-align: center;
+    font-weight: 700;
+    font-size: var(--small-title);
+    line-height: 1;
+    margin-bottom: var(--regular-spacer);
+}
+
+.moreList {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: var(--extrasmall-spacer);
+}
+
+.moreListItemImage {
+    max-width: 100%;
+    display: block;
+}
+
+.moreListItemLink {
+    position: relative;
+    display: block;
+    line-height: 0;
+}
+
+.moreListItemPicture {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.moreListItemOverlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 0%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: var(--blue-color);
+}
+
+.moreListItemLink:hover .moreListItemOverlay {
+    opacity: 1;
+    height: 100%;
+}
+
+.moreListItemOverlayContent {
+    color: var(--green-color);
+    opacity: 1;
+    font-size: 2.4rem;
+    height: 100%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    display: flex;
+    flex-direction: column;
+    line-height: 1.4;
+    padding: 6% 3% 3% 3%;
+    justify-content: space-between;
+}
+
+.moreListItemOverlayContentTitle {
+    font-weight: 700;
+    margin-bottom: 3%;
+}
+
+.moreListItemOverlayContentButton {
+    justify-self: flex-end; 
+    text-decoration: none;
+    padding: var(--extrasmall-spacer);
+    border: .1rem solid var(--green-color);
+    color: var(--green-color);
+    transition: all .2s ease-out;
+}
+
+.moreListItemOverlayContentButton:hover {
+    color: var(--blue-color);
+    background-color: var(--green-color);
+}
+
 @media (min-width: 378px) {
     .introImageImg {
         width: 100%;
@@ -366,6 +460,19 @@
         text-align: center;
         font-weight: 700;
     }
+
+    .moreInnerwrapper {
+        padding: 5rem var(--extrasmall-spacer) 8rem var(--extrasmall-spacer);
+    }
+
+    .moreList {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .moreTitle {
+        font-size: var(--medium-title);
+        margin-bottom: var(--medium-spacer);
+    }
 }
 
 @media (min-width: 960px) {
@@ -419,5 +526,14 @@
 
     .mainTypographyTitle {
         font-size: var(--medium-title);
+    }
+
+    .moreList {
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: var(--regular-spacer);
+    }
+
+    .moreTitle {
+        font-size: var(--large-title);
     }
 }
