--- a/src/pages/work.module.css
+++ b/src/pages/work.module.css
@@ -90,7 +90,7 @@
     font-size: var(--small-title);
     text-align: center;
     line-height: .9;
-    padding-top: var(--medium-spacer);
+    padding: var(--medium-spacer) 0 var(--regular-spacer) 0;
 }
   
 
@@ -219,6 +219,7 @@
 
     .contactTitle {
         font-size: var(--large-title);
+        padding: var(--medium-spacer) 0;
     }
 
     .contactInnerwrapper {
